[package]
name = "jedeop"
version = "0.1.0"
authors = ["jedeop <cong0116@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "mysql", "macros", "chrono" ] } 
tokio = { version = "0.2", features = ["macros"] }
async-graphql = "1.18"
async-graphql-warp = "1.18"
warp = "0.2"
anyhow = "1.0"
dotenv = "0.15"