[package]
name = "blog"
version = "0.1.0"
authors = ["jedeop <cong0116@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-async-std-native-tls", "postgres", "macros", "chrono", "uuid" ] } 
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
async-graphql = { version = "2.9.10", features = ["chrono", "uuid", "log"] }
async-graphql-tide = "2.9.10"
anyhow = "1.0"
base64 = "0.13.0"
askama = "0.10.5"
resvg = "0.15.0"
usvg = "0.15.0"
tiny-skia = "0.5"
serde = "1.0"
rand = "0.8"
async-sqlx-session = { version = "0.2.1", features = ["pg"] }
surf = "2.2.0"
jsonwebtoken = "7"
chrono = "0.4"